<resources>
    <string name="app_name">Whiff</string>
    <string name="wordLogo">Worded Logo</string>
    <string name="scan">Scan Packets</string>
    <string name="import_file">Import File</string>
    <string name="helpAndFaq"><![CDATA[Help & FAQ]]></string>
    <string name="exit">Exit</string>
    <string name="title_activity_help_activity">help_activity</string>
    <string name="helpText">Help</string>
    <string name="faqText">FAQ</string>
    <string name="action_settings">Settings</string>

<<<<<<< HEAD
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_packet_capture">Packet Capture</string>
    <string name="navigation_drawer_wep_crack">WEP Crack</string>
    <string name="navigation_drawer_import">Import Data</string>
    <string name="navigation_drawer_help_faq">Help and FAQ</string>
=======
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="connect">Connect!</string>
    <string name="disconnert">Disconnect!</string>
    <string name="connecting">Network Sniffer is starting...</string>
    <string name="connected">Network Sniffer is started.</string>
    <string name="disconnecting">Network Sniffer is stopping...</string>
    <string name="disconnected">Network Sniffer is stopped.</string>

    <string name="helpMessage">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempor erat vestibulum est aliquam, et venenatis lectus semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus felis diam, blandit feugiat ipsum in, ultricies fringilla magna. Sed est metus, venenatis egestas vulputate at, pretium sed orci. Morbi eget cursus risus, at elementum neque.
\n\t\t Etiam porttitor, eros auctor sollicitudin faucibus, mauris nisl cursus dolor, ac blandit quam libero id nisl. Praesent eget nunc quis felis tempor condimentum vel molestie massa. Mauris lacinia enim quam, at imperdiet odio vestibulum eget. Pellentesque faucibus nibh eget erat eleifend, vel pulvinar lacus ultricies. Aliquam sed sapien purus. Vivamus sit amet quam eros. Quisque eu quam at orci sollicitudin tincidunt. Sed aliquam luctus gravida.
\n\t\t Nunc eget ex eget dolor ultricies scelerisque id ut metus. Vestibulum eget viverra risus. Duis congue pretium arcu ut cursus. Maecenas sed magna erat. Pellentesque cursus ultrices suscipit. Donec a lacus vitae quam molestie cursus. Curabitur auctor massa eget libero blandit accumsan. Aenean sit amet libero in lorem porttitor dapibus.
\n\t\t Vivamus iaculis, neque id aliquet tristique, erat lorem porttitor felis, vitae egestas dui risus nec lacus. Proin ultrices egestas magna, ac consectetur purus eleifend eget. Aliquam euismod felis condimentum rutrum ultricies. Curabitur in interdum magna, id convallis neque. Vivamus scelerisque tincidunt hendrerit. In tempor justo eu neque venenatis aliquet. Aliquam ut lectus faucibus, consequat odio congue, fermentum ex. Phasellus nunc diam, commodo nec dolor sit amet, maximus volutpat mauris.
\n\t\t Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla nec lectus ut mauris volutpat finibus quis vel massa. Ut porta, enim at luctus elementum, lorem orci accumsan massa, ac volutpat quam urna ut magna. Mauris consequat dolor et ex vestibulum malesuada. Mauris aliquam vel leo in aliquet. Nulla auctor, est nec mollis eleifend, tortor justo viverra massa, ac ultrices arcu risus id eros. Vivamus ac justo maximus, vestibulum tellus sed, dapibus risus.
\n\t\t Aliquam at magna eget mauris bibendum malesuada. Cras id massa tempus, rutrum ante non, mollis purus. Maecenas sagittis a nibh non interdum. Vivamus vel mi risus. Curabitur cursus iaculis erat eget vulputate. Pellentesque nec magna in massa convallis lacinia. Donec pulvinar lobortis nunc, sed vestibulum dui venenatis scelerisque. Vivamus aliquet sed dolor ac dapibus. Praesent dolor dolor, porta quis pretium sollicitudin, dictum ut dui.r
    </string>
    <string name="faqMessage">Place Holder</string>
    <string name="scanning_gif">scanning gif</string>
    <string name="scanningStatusText">Press Start to Capture Packets</string>
    <string name="startButtonText">Start</string>
    <string name="title_activity_scan_activity">scan_activity</string>
>>>>>>> parent of c02c1e0... Merge branch 'branch_05_UI' into dev

</resources>
